Removed unused variables and updated allowed headers list in cors configuration